# pydantic-ai-v2-examples

./: .gitignore  README.md  pyproject.toml
scripts/: build_synthetic_db.py
src/capabilities_example/: __init__.py  agent.py  benchmark.py  cli.py  constants.py  deps.py  tools.py
src/capabilities_example/capabilities/: __init__.py  builder.py  goodwill_credits.py  order_lifecycle.py  payment_adjustments.py  refund.py  return_shipping.py
src/data_analytics/: agent.py  cli.py  constants.py  deps.py  openrouter.py  tools.py
src/data_analytics/capabilities/: __init__.py  abc_analysis.py  builder.py
src/data_analytics/data/: supply_chain_demand_forecast.csv  supply_chain_inventory.csv  supply_chain_orders.csv  supply_chain_shipments.csv  supply_chain_suppliers.csv
src/incident_report/: __init__.py  agent.py  cli.py  models.py  report_writer.py  sample_data.py  synthetic_cases.py
src/incident_report/capabilities/: __init__.py  builder.py  customer_context.py  customer_notification.py  incident_intelligence.py
src/incident_report/data/: synthetic_cases.sqlite  synthetic_cases_seed.sql
src/sentiment_analysis/: example.py  settings.py
src/tech_lead_simulator/: __init__.py  example.py
